tests/algorithms/transpiler/Zig/ciphers/autokey.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/ciphers/autokey.zig:117:13: error: name shadows primitive 'c_char'
/workspace/mochi/tests/algorithms/transpiler/Zig/ciphers/autokey.zig:117:13: note: consider using @"c_char" to disambiguate